master to maven but not passing tests